--- a/doc/examples/head_controlled_well/Head_Controlled_Well.ipynb
+++ b/doc/examples/head_controlled_well/Head_Controlled_Well.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "ba22b0f1-6d9e-448c-92b9-ea8e6bc02285",
    "metadata": {
     "tags": [
@@ -115,16 +115,6 @@
      "data": {
       "text/markdown": [
        "```python\n",
-       "\"\"\"Create and run a MODFLOW 6 model with flopy.\n",
-       "\"\"\"\n",
-       "\n",
-       "import flopy\n",
-       "\n",
-       "import pymf6\n",
-       "\n",
-       "MF6EXE = pymf6.__mf6_exe__\n",
-       "\n",
-       "\n",
        "def make_input(\n",
        "        model_data,\n",
        "        exe_name=MF6EXE,\n",
@@ -223,141 +213,6 @@
        "        make_transport_model(sim, model_data)\n",
        "\n",
        "    sim.write_simulation()\n",
-       "\n",
-       "\n",
-       "def make_transport_model(sim, model_data):\n",
-       "\n",
-       "    # Instantiating MODFLOW 6 groundwater transport package\n",
-       "    gwtname = 'gwt_' + model_data['name']\n",
-       "    gwt = flopy.mf6.MFModel(\n",
-       "        sim,\n",
-       "        model_type='gwt6',\n",
-       "        modelname=gwtname,\n",
-       "        model_nam_file=f'{gwtname}.nam'\n",
-       "    )\n",
-       "    gwt.name_file.save_flows = True\n",
-       "\n",
-       "    # create iterative model solution and register the gwt model with it\n",
-       "    imsgwt = flopy.mf6.ModflowIms(\n",
-       "        sim,\n",
-       "        print_option=\"SUMMARY\",\n",
-       "        # outer_dvclose=hclose,\n",
-       "        # outer_maximum=nouter,\n",
-       "        under_relaxation=\"NONE\",\n",
-       "        # inner_maximum=ninner,\n",
-       "        # inner_dvclose=hclose,\n",
-       "        # rcloserecord=rclose,\n",
-       "        linear_acceleration=\"BICGSTAB\",\n",
-       "        scaling_method=\"NONE\",\n",
-       "        reordering_method=\"NONE\",\n",
-       "        # relaxation_factor=relax,\n",
-       "        filename=f'{gwtname}.ims'\n",
-       "    )\n",
-       "    sim.register_ims_package(imsgwt, [gwt.name])\n",
-       "\n",
-       "    # Instantiating MODFLOW 6 transport discretization package\n",
-       "    flopy.mf6.ModflowGwtdis(\n",
-       "        gwt,\n",
-       "        **model_data['dim_kwargs'],\n",
-       "        filename=f'{gwtname}.dis'\n",
-       "    )\n",
-       "\n",
-       "    # Instantiating MODFLOW 6 transport initial concentrations\n",
-       "    flopy.mf6.ModflowGwtic(\n",
-       "        gwt, strt=model_data['initial_concentration'], filename=f'{gwtname}.ic'\n",
-       "    )\n",
-       "\n",
-       "    # Instantiating MODFLOW 6 transport advection package\n",
-       "    flopy.mf6.ModflowGwtadv(\n",
-       "        gwt, scheme=model_data['scheme'], filename=f'{gwtname}.adv'\n",
-       "    )\n",
-       "\n",
-       "    # Instantiating MODFLOW 6 transport dispersion package\n",
-       "    long_disp = model_data['longitudinal_dispersivity']\n",
-       "    ratio = model_data['dispersivity_ratio']\n",
-       "    if long_disp != 0:\n",
-       "        flopy.mf6.ModflowGwtdsp(\n",
-       "            gwt,\n",
-       "            xt3d_off=True,\n",
-       "            alh=long_disp,\n",
-       "            ath1=long_disp * ratio,\n",
-       "            filename=f'{gwtname}.dsp'\n",
-       "        )\n",
-       "\n",
-       "    # Instantiating MODFLOW 6 transport mass storage package (formerly \"reaction\" package in MT3DMS)\n",
-       "    flopy.mf6.ModflowGwtmst(\n",
-       "        gwt,\n",
-       "        porosity=model_data['porosity'],\n",
-       "        first_order_decay=False,\n",
-       "        decay=None,\n",
-       "        decay_sorbed=None,\n",
-       "        sorption=None,\n",
-       "        bulk_density=None,\n",
-       "        distcoef=None,\n",
-       "        filename=f'{gwtname}.mst'\n",
-       "    )\n",
-       "\n",
-       "    # Instantiating MODFLOW 6 transport source-sink mixing package\n",
-       "    sourcerecarray = [\n",
-       "        ('WEL-1', 'AUX', 'CONCENTRATION'),\n",
-       "        ('CHD-1', 'AUX', 'CONCENTRATION')\n",
-       "        ]\n",
-       "    flopy.mf6.ModflowGwtssm(\n",
-       "        gwt, sources=sourcerecarray, filename=f'{gwtname}.ssm'\n",
-       "    )\n",
-       "    if 'cnc' in model_data:\n",
-       "        flopy.mf6.ModflowGwtcnc(\n",
-       "            gwt,\n",
-       "            stress_period_data=model_data['cnc']\n",
-       "        )\n",
-       "    # Instantiating MODFLOW 6 transport output control package\n",
-       "    flopy.mf6.ModflowGwtoc(\n",
-       "        gwt,\n",
-       "        budget_filerecord=f'{gwtname}.cbc',\n",
-       "        concentration_filerecord=f'{gwtname}.ucn',\n",
-       "        concentrationprintrecord=[\n",
-       "            ('COLUMNS', 10, 'WIDTH', 15, 'DIGITS', 6, 'GENERAL')\n",
-       "        ],\n",
-       "        saverecord=[('CONCENTRATION', 'LAST'), ('BUDGET', 'LAST')],\n",
-       "        printrecord=[('CONCENTRATION', 'LAST'), ('BUDGET', 'LAST')],\n",
-       "    )\n",
-       "\n",
-       "    # Instantiate observation package (for transport)\n",
-       "    obs = model_data['obs']\n",
-       "    if obs:\n",
-       "        obslist = []\n",
-       "        for name, obs_coords in obs:\n",
-       "            obslist.append([name, 'concentration', obs_coords])\n",
-       "        obsdict = {f'{gwtname}.obs.csv': obslist}\n",
-       "        flopy.mf6.ModflowUtlobs(\n",
-       "            gwt, print_input=False, continuous=obsdict\n",
-       "        )\n",
-       "\n",
-       "    # Instantiating MODFLOW 6 flow-transport exchange mechanism\n",
-       "    flopy.mf6.ModflowGwfgwt(\n",
-       "        sim,\n",
-       "        exgtype='GWF6-GWT6',\n",
-       "        exgmnamea=model_data['name'],\n",
-       "        exgmnameb=gwtname,\n",
-       "        filename=f'{model_data[\"name\"]}.gwfgwt'\n",
-       "    )\n",
-       "\n",
-       "def get_simulation(model_path, exe_name=MF6EXE, verbosity_level=0):\n",
-       "    \"\"\"Get simulation for a model.\"\"\"\n",
-       "    sim = flopy.mf6.MFSimulation.load(\n",
-       "        sim_ws=model_path,\n",
-       "        exe_name=exe_name,\n",
-       "        verbosity_level=verbosity_level,\n",
-       "    )\n",
-       "    return sim\n",
-       "\n",
-       "\n",
-       "def run_simulation(model_path, verbosity_level=0):\n",
-       "    \"\"\"Run a MODFLOW 6 model\"\"\"\n",
-       "    sim = get_simulation(\n",
-       "        model_path,\n",
-       "        verbosity_level=verbosity_level)\n",
-       "    sim.run_simulation()\n",
        "```\n"
       ],
       "text/plain": [
@@ -370,7 +225,7 @@
    ],
    "source": [
     "%%include ../../../src/pymf6/modeling_tools/make_model.py\n",
-    "start_at = 'def _make_wel_stress_period'\n",
+    "start_at = 'def make_input'\n",
     "end_at = 'sim.write_simulation()'\n",
     "import_module = True"
    ]
@@ -437,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "3f6bc856-09b3-48f4-aab4-6dd3c4e510fd",
    "metadata": {
     "tags": []
@@ -484,16 +339,6 @@
        "    ],\n",
        "    'transport': False,\n",
        "}\n",
-       "\n",
-       "BASE_TRANSPORT_MODEL_DATA = {\n",
-       "    'initial_concentration': 0,\n",
-       "    'scheme': 'UPSTREAM', #'TVD',  # or 'UPSTREAM'\n",
-       "    'longitudinal_dispersivity': 1.0,\n",
-       "    # Ratio of transverse to longitudinal dispersitivity\n",
-       "    'dispersivity_ratio': 1.0,\n",
-       "    'porosity': 0.35,\n",
-       "    'obs': None,\n",
-       "}\n",
        "```\n"
       ],
       "text/plain": [
@@ -507,7 +352,7 @@
    "source": [
     "%%include ../../../src/pymf6/modeling_tools/base_model.py\n",
     "start_at  = 'BASE_MODEL_DATA'\n",
-    "end_before = 'def make_model_data'\n",
+    "end_before = 'BASE_TRANSPORT_MODEL_DATA'\n",
     "import_module = True "
    ]
   },
