--- a/doc/examples/simple_transport/Controlled_Simple_Transport.ipynb
+++ b/doc/examples/simple_transport/Controlled_Simple_Transport.ipynb
@@ -20,8 +20,8 @@
    "source": [
     "from matplotlib import pyplot as plt\n",
     "from pymf6.mf6 import MF6\n",
-    "from pymf6.modeling_tools.plotting import show_heads, show_well_head, show_concentration\n",
-    "from pymf6.modeling_tools.make_model import get_simulation\n",
+    "from pymf6tools.plotting import show_heads, show_well_head, show_concentration\n",
+    "from pymf6tools.make_model import get_simulation\n",
     "from create_model import create_model"
    ]
   },
