--- a/doc/examples/simple_transport/Simple_Transport.ipynb
+++ b/doc/examples/simple_transport/Simple_Transport.ipynb
@@ -20,8 +20,8 @@
    },
    "outputs": [],
    "source": [
-    "from pymf6.modeling_tools.make_model import run_simulation\n",
-    "from pymf6.modeling_tools.plotting import show_heads, show_well_head, show_concentration, show_bcs"
+    "from pymf6tools.make_model import run_simulation\n",
+    "from pymf6tools.plotting import show_heads, show_well_head, show_concentration, show_bcs"
    ]
   },
   {
