--- a/doc/examples/simple_transport/Controlled_Simple_Transport.ipynb
+++ b/doc/examples/simple_transport/Controlled_Simple_Transport.ipynb
@@ -71,7 +71,7 @@
    "id": "1c0610e2-381e-4af6-8737-52a1ec7ffcb1",
    "metadata": {},
    "source": [
-    "Now, we can inspect the model by instantiating `MF&` form `pymf6`:"
+    "Now, we can inspect the model by instantiating `MF6` form `pymf6`:"
    ]
   },
   {
