--- a/doc/Interactive.ipynb
+++ b/doc/Interactive.ipynb
@@ -150,10 +150,10 @@
     {
      "data": {
       "text/html": [
-       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.4.1.dev62+gffa7102c.d20250314</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.6.1</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is available.</p>"
+       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.4.1.dev64+ge5380600.d20250314</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.6.1</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is available.</p>"
       ],
       "text/plain": [
-       "<pymf6.mf6.MF6 at 0x176cfaf90>"
+       "<pymf6.mf6.MF6 at 0x132ffaf90>"
       ]
      },
      "execution_count": 6,
@@ -198,7 +198,7 @@
       "========================\n",
       "pymf6 configuration data\n",
       "========================\n",
-      "pymf6 version: 1.4.1.dev62+gffa7102c.d20250314\n",
+      "pymf6 version: 1.4.1.dev64+ge5380600.d20250314\n",
       "xmipy version: 1.3.1\n",
       "modflowapi version: 0.3.0.dev0\n",
       "ini file path: HOME/pymf6.ini\n",
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "3bcf0080-310d-4e2b-aaa0-922e40320ba8",
    "metadata": {},
    "outputs": [
@@ -707,12 +707,12 @@
        " 'HEADCONWELL/MVR/IBUDCSV': array([0], dtype=int32),\n",
        " 'SLN_1/IMSLINEAR/IW': array([0, 0, 0, ..., 0, 0, 0], shape=(100,), dtype=int32),\n",
        " 'SLN_1/IMSLINEAR/ARO': array([0.]),\n",
-       " 'TDIS/TOPERTIM': array([11.]),\n",
+       " 'TDIS/TOPERTIM': array([0.]),\n",
        " 'HEADCONWELL/VSC/IOUT': array([1012], dtype=int32),\n",
        " 'HEADCONWELL/VSC/LASTONPER': array([0], dtype=int32)}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
