Update examples to multiple models per model type

--- a/doc/Interactive.ipynb
+++ b/doc/Interactive.ipynb
@@ -150,10 +150,10 @@
     {
      "data": {
       "text/html": [
-       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.4.1.dev64+ge5380600.d20250314</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.6.1</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is available.</p>"
+       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.4.1.dev68+g2bbc494a.d20250316</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.6.1</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is available.</p>"
       ],
       "text/plain": [
-       "<pymf6.mf6.MF6 at 0x132ffaf90>"
+       "<pymf6.mf6.MF6 at 0x11cbcf8c0>"
       ]
      },
      "execution_count": 6,
@@ -198,7 +198,7 @@
       "========================\n",
       "pymf6 configuration data\n",
       "========================\n",
-      "pymf6 version: 1.4.1.dev64+ge5380600.d20250314\n",
+      "pymf6 version: 1.4.1.dev68+g2bbc494a.d20250316\n",
       "xmipy version: 1.3.1\n",
       "modflowapi version: 0.3.0.dev0\n",
       "ini file path: HOME/pymf6.ini\n",
@@ -727,7 +727,7 @@
    "id": "129f7d45-df15-471e-8ad5-98eb0d96d991",
    "metadata": {},
    "source": [
-    "A simulation can have several models.\n",
+    "A simulation can have several models types.\n",
     "These include:\n",
     "\n",
     "* `gwf6` - flow model\n",
@@ -775,8 +775,8 @@
     "tags": []
    },
    "source": [
-    "The example has only a flow model.\n",
-    "Let's get it:"
+    "The example has only a flow models.\n",
+    "Let's get them:"
    ]
   },
   {
@@ -792,7 +792,58 @@
    },
    "outputs": [],
    "source": [
-    "gwf = mf6.models['gwf6']"
+    "flow_models = mf6.models['gwf6']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea01df33-dab7-4aa6-94b2-49bb1af7523d",
+   "metadata": {},
+   "source": [
+    "MODFLOW supports multiple flow models.\n",
+    "An example is the nesting an inner model with finer discretization into an outer\n",
+    "model withcoarse discritization.\n",
+    "Let's get the flow model names:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "fce29e1c-e085-4d89-b116-f950bcd0e2e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['headconwell'])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow_models.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec067637-e05a-4862-8bee-422c8a1b575b",
+   "metadata": {},
+   "source": [
+    "This simple simulation has onyl one flow model.\n",
+    "We get a reference to thsi model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "73850635-7f08-4f4b-bfb7-411f90e0e580",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gwf = flow_models['headconwell']"
    ]
   },
   {
@@ -808,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "2e4697f8-ffe9-46e9-9cd4-255729acf73d",
    "metadata": {},
    "outputs": [
@@ -841,7 +892,7 @@
        " 'usertonode']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "bd2a172f-4bc6-4e8f-a976-c8b73cbb341f",
    "metadata": {},
    "outputs": [
@@ -872,7 +923,7 @@
        "np.int32(4)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "f19aee17-d767-40df-89d8-0798745e73f8",
    "metadata": {
     "editable": true,
@@ -1027,7 +1078,7 @@
        "with `.as_mutable_bc()`."
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "dcd69985-d2bb-4f84-b160-24f1d933f9b8",
    "metadata": {
     "editable": true,
@@ -1104,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "ec4ffabc-ac68-4125-b931-5b78ccf9cc94",
    "metadata": {
     "editable": true,
@@ -1134,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "8f38c556-c5d2-4cd8-9224-25edaeac72e0",
    "metadata": {
     "editable": true,
@@ -1169,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "6891da55-7dea-46f2-89bc-de5a360df2a1",
    "metadata": {
     "editable": true,
@@ -1185,7 +1236,7 @@
        "<States.stress_period_start: 1>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1204,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "fb7a50d6-b661-49e2-a698-8a00e9f7e78e",
    "metadata": {
     "editable": true,
@@ -1229,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "0cf984de-0f14-48e4-aa93-9311942c35f2",
    "metadata": {
     "editable": true,
@@ -1279,7 +1330,7 @@
        "0  (0, 4, 4) -0.05"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "55e5c293-2cf7-4a43-bf43-7765947304ce",
    "metadata": {},
    "outputs": [],
@@ -1318,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "a794f331-9eb5-44e3-9779-f116230bcea0",
    "metadata": {},
    "outputs": [
@@ -1362,7 +1413,7 @@
        "0  (0, 4, 4) -0.5"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "815c02e6-7445-442a-a8f6-f7892f4a24a0",
    "metadata": {},
    "outputs": [],
@@ -1403,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "9e0380f3-7267-4ad7-9443-c0a2c3952029",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1498,7 @@
        "0  (0, 4, 4) -0.55"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
