--- a/doc/examples/head_controlled_well/Head_Controlled_Well.ipynb
+++ b/doc/examples/head_controlled_well/Head_Controlled_Well.ipynb
@@ -793,6 +793,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5b7b99f5-3252-49a1-ae35-8d56493ad2fd",
+   "metadata": {},
+   "source": [
+    "There are only flow models:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "99c2508c-7fef-4a32-be09-3742a338cebf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['gwf6'])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mf6.models.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4daeee06-b677-46b4-9938-f4e015dc3136",
    "metadata": {
     "editable": true,
@@ -802,12 +831,12 @@
     "tags": []
    },
    "source": [
-    "Get the flow model:"
+    "Get the flow models:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "6423d6b8-3245-4052-afd7-fab88401abbd",
    "metadata": {
     "editable": true,
@@ -818,7 +847,54 @@
    },
    "outputs": [],
    "source": [
-    "gwf = mf6.models['gwf6']"
+    "gwf_models = mf6.models['gwf6']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96ee2c39-a80f-47c3-b8eb-f6c3d56a8aa0",
+   "metadata": {},
+   "source": [
+    "There is onyl one flow model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a93c4143-4ee1-4695-80d1-ea4d338bfb71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['headconwell'])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gwf_models.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "096c7344-caad-47bf-abfb-3aabacdd24fe",
+   "metadata": {},
+   "source": [
+    "We get a reference to this model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0a21221f-0c5e-4af4-84ed-23ef0811775b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gwf = gwf_models['headconwell']"
    ]
   },
   {
@@ -837,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "36b986ee-a818-47e8-a7a7-7ec3a2a752f5",
    "metadata": {
     "editable": true,
@@ -973,7 +1049,7 @@
        "with `.as_mutable_bc()`."
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "208cf010-eda6-434e-86f5-28bcfb5dd9c1",
    "metadata": {
     "editable": true,
@@ -1041,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "4fb3a1db-ed66-4bfa-b49e-7ac6c36cd130",
    "metadata": {
     "editable": true,
@@ -1071,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "3b78206f-a5c1-4ef4-a474-cd7743a3ecf3",
    "metadata": {
     "editable": true,
@@ -1103,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "3d45f4d1-9fa5-4ded-acf9-771a2e573740",
    "metadata": {
     "editable": true,
@@ -1133,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "1ef0a94c-57c1-463e-9009-7e9e32b79184",
    "metadata": {
     "editable": true,
@@ -1183,7 +1259,7 @@
        "0  (0, 4, 4) -0.05"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "ba51b64e-1aba-4042-9acb-b5fd1c41fdd3",
    "metadata": {
     "editable": true,
@@ -1224,7 +1300,7 @@
        "np.float64(-0.05)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "d7cc8daf-1468-46fe-92ad-5389e819cc17",
    "metadata": {
     "editable": true,
@@ -1265,7 +1341,7 @@
        "(np.int64(0), np.int64(4), np.int64(4))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "033ab251-afe5-4a77-944a-7eabc9849ed0",
    "metadata": {
     "editable": true,
@@ -1307,7 +1383,7 @@
        "np.float64(1.0)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1332,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "6e7b2d01-88e6-4aed-bacb-f5dc8a80e859",
    "metadata": {
     "editable": true,
@@ -1364,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "4b3819bc-3406-42e3-aab6-92944da43be3",
    "metadata": {
     "editable": true,
@@ -1394,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "67c2cd41-6ed7-44a4-a8f6-44b93ee9733c",
    "metadata": {
     "editable": true,
@@ -1427,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "821abbdf-2689-463b-912c-90420def95e5",
    "metadata": {
     "editable": true,
@@ -1436,15 +1512,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NORMAL TERMINATION OF SIMULATION\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for model in loop:\n",
     "    if gwf.kper == 2:\n",
@@ -1502,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "167130f2-619f-460e-bc14-c992c5933ae9",
    "metadata": {
     "editable": true,
@@ -1538,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "a63c807e-174c-4d33-8724-f89579ee955e",
    "metadata": {
     "editable": true,
