--- a/doc/examples/river_condutance/RiveRiverConductancePymf6.ipynb
+++ b/doc/examples/river_condutance/RiveRiverConductancePymf6.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "mf6 = MF6(name)\n",
-    "gwf = mf6.models['gwf6']\n",
+    "gwf = mf6.models['gwf6']['rivercond']\n",
     "loop = mf6.model_loop()"
    ]
   },
@@ -105,15 +105,7 @@
    "execution_count": 5,
    "id": "09171870-00cd-469e-8928-d9e9ac7dc055",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NORMAL TERMINATION OF SIMULATION\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for model in loop:\n",
     "    if model.state == states.iteration_start:\n",
