--- a/doc/Interactive.ipynb
+++ b/doc/Interactive.ipynb
@@ -150,10 +150,10 @@
     {
      "data": {
       "text/html": [
-       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.4.1.dev68+g2bbc494a.d20250316</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.6.1</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is available.</p>"
+       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.4.1.dev78+ge07d1de9.d20250401</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.6.1</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is available.</p>"
       ],
       "text/plain": [
-       "<pymf6.mf6.MF6 at 0x11cbcf8c0>"
+       "<pymf6.mf6.MF6 at 0x13fbcb8c0>"
       ]
      },
      "execution_count": 6,
@@ -198,7 +198,7 @@
       "========================\n",
       "pymf6 configuration data\n",
       "========================\n",
-      "pymf6 version: 1.4.1.dev68+g2bbc494a.d20250316\n",
+      "pymf6 version: 1.4.1.dev78+ge07d1de9.d20250401\n",
       "xmipy version: 1.3.1\n",
       "modflowapi version: 0.3.0.dev0\n",
       "ini file path: HOME/pymf6.ini\n",
@@ -1196,7 +1196,7 @@
    },
    "outputs": [],
    "source": [
-    "for model in loop:\n",
+    "for model_step in loop:\n",
     "    if gwf.kper > 0:\n",
     "        break"
    ]
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "6891da55-7dea-46f2-89bc-de5a360df2a1",
    "metadata": {
     "editable": true,
@@ -1233,16 +1233,16 @@
     {
      "data": {
       "text/plain": [
-       "<States.stress_period_start: 1>"
+       "<States.timestep_start: 3>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.state"
+    "model_step.state"
    ]
   },
   {
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "fb7a50d6-b661-49e2-a698-8a00e9f7e78e",
    "metadata": {
     "editable": true,
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "0cf984de-0f14-48e4-aa93-9311942c35f2",
    "metadata": {
     "editable": true,
@@ -1330,7 +1330,7 @@
        "0  (0, 4, 4) -0.05"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,12 +1349,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "55e5c293-2cf7-4a43-bf43-7765947304ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for model in loop:\n",
+    "for model_step in loop:\n",
     "    if gwf.kper > 1:\n",
     "        break"
    ]
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "a794f331-9eb5-44e3-9779-f116230bcea0",
    "metadata": {},
    "outputs": [
@@ -1413,7 +1413,7 @@
        "0  (0, 4, 4) -0.5"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "815c02e6-7445-442a-a8f6-f7892f4a24a0",
    "metadata": {},
    "outputs": [],
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "9e0380f3-7267-4ad7-9443-c0a2c3952029",
    "metadata": {},
    "outputs": [
@@ -1498,7 +1498,7 @@
        "0  (0, 4, 4) -0.55"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,6 +1506,135 @@
    "source": [
     "mywell"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2814a28c-b69b-4c9b-8109-a3494de3f373",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<States.timestep_start: 3>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_step.state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "ad53f942-e0f6-438f-89c3-645033f46fd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['headconwell']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_step.simulation_group.model_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "610e1699-3df2-4a28-a156-e59eab28043b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int32(2)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_step.simulation_group.kper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "703ffaaa-d6e8-439c-aebc-8e9aaf7f954e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(11.083333333333334)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gwf.totim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "751bf33c-55bd-46a8-87a3-ec4071bc3505",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "HEADCONWELL, 1 Layer, 10 Row, 10 Column model\n",
+       "Packages accessible include: \n",
+       "  ArrayPackage objects:\n",
+       "    dis: <class 'modflowapi.extensions.pakbase.ApiDisPackage'>\n",
+       "    ic: <class 'modflowapi.extensions.pakbase.ApiIcPackage'>\n",
+       "    sto: <class 'modflowapi.extensions.pakbase.ApiStoPackage'>\n",
+       "    npf: <class 'modflowapi.extensions.pakbase.ApiNpfPackage'>\n",
+       "  ListPackage objects:\n",
+       "    mywell: <class 'modflowapi.extensions.pakbase.ApiWelPackage'>\n",
+       "    chd_0: <class 'modflowapi.extensions.pakbase.ApiChdPackage'>\n",
+       "  AdvancedPackage objects:\n",
+       "    hfb: <class 'modflowapi.extensions.pakbase.ApiHfbPackage'>\n",
+       "    csub: <class 'modflowapi.extensions.pakbase.ApiCsubPackage'>\n",
+       "    mvr: <class 'modflowapi.extensions.pakbase.ApiMvrPackage'>\n",
+       "    vsc: <class 'modflowapi.extensions.pakbase.ApiVscPackage'>\n",
+       "    buy: <class 'modflowapi.extensions.pakbase.ApiBuyPackage'>\n",
+       "    gnc: <class 'modflowapi.extensions.pakbase.ApiGncPackage'>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gwf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fde2326a-28ea-4269-ae9d-3b3ee2f7e93a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
