Hide input of helper cells

--- a/doc/examples/river_condutance/RiverConductanceOverview.ipynb
+++ b/doc/examples/river_condutance/RiverConductanceOverview.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "37737954-db0b-437f-8011-d7b8e26413a5",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Dynamic River Conductance"
    ]
@@ -40,10 +46,16 @@
   {
    "cell_type": "markdown",
    "id": "a91237c4-5f03-4478-a397-0d79489ab445",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "1. [Problem adaption](RiverConductanceBase.ipynb)\n",
-    "2. [Using `modflow`](RiverConductanceAPI.ipynb)\n",
+    "2. [Using `modflowapi`](RiverConductanceAPI.ipynb)\n",
     "3. [Using `pymf6`](RiveRiverConductancePymf6.ipynb)"
    ]
   }
@@ -64,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
