--- a/doc/examples/river_condutance/RiverConductanceAPI.ipynb
+++ b/doc/examples/river_condutance/RiverConductanceAPI.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "5493d164-99c0-4eae-a8fc-9e83835962d0",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -59,7 +67,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "722132b2-9900-4ed2-84f6-f51a594e0910",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "remove-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -348,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
