--- a/doc/Interactive.ipynb
+++ b/doc/Interactive.ipynb
@@ -150,10 +150,10 @@
     {
      "data": {
       "text/html": [
-       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.4.1.dev78+ge07d1de9.d20250401</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.6.1</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is available.</p>"
+       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.4.1.dev86+gdf41645b.d20250622</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.7.0.dev2</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is NOT available.</p>"
       ],
       "text/plain": [
-       "<pymf6.mf6.MF6 at 0x13fbcb8c0>"
+       "<pymf6.mf6.MF6 at 0x1077d34d0>"
       ]
      },
      "execution_count": 6,
@@ -198,13 +198,13 @@
       "========================\n",
       "pymf6 configuration data\n",
       "========================\n",
-      "pymf6 version: 1.4.1.dev78+ge07d1de9.d20250401\n",
+      "pymf6 version: 1.4.1.dev86+gdf41645b.d20250622\n",
       "xmipy version: 1.3.1\n",
       "modflowapi version: 0.3.0.dev0\n",
       "ini file path: HOME/pymf6.ini\n",
       "dll file path: path/to/dll/libmf6.dll\n",
-      "MODFLOW version: 6.6.1\n",
-      "MODFLOW Fortan variable documentation is available.\n"
+      "MODFLOW version: 6.7.0.dev2\n",
+      "MODFLOW Fortan variable documentation is NOT available.\n"
      ]
     }
    ],
@@ -521,17 +521,11 @@
     {
      "data": {
       "text/html": [
-       "<h3>Variable NPER</h3><table><tbody><tr><td>value: </td><td>np.int32(4)</td></tr><tr><td>docstring: </td><td>set equal to nper</td></tr><tr><td>docstring source: </td><td>src/Timing/ats.f90\n",
-       "                                 line 24</td></tr><tr><td>docstring: </td><td>number of stress period</td></tr><tr><td>docstring source: </td><td>src/Timing/tdis.f90\n",
-       "                                 line 21</td></tr></tbody></table>"
+       "<h3>Variable NPER</h3><table><tbody><tr><td>value: </td><td>np.int32(4)</td></tr></tbody></table>"
       ],
       "text/plain": [
        "Variable NPER \n",
-       "value: np.int32(4)\n",
-       "docstring: set equal to nper\n",
-       "docstring source: src/Timing/ats.f90 line 24\n",
-       "docstring: number of stress period\n",
-       "docstring source: src/Timing/tdis.f90 line 21"
+       "value: np.int32(4)"
       ]
      },
      "execution_count": 15,
@@ -560,15 +554,12 @@
     {
      "data": {
       "text/html": [
-       "<h3>Variable PERLEN</h3><table><tbody><tr><td>value: </td><td>array([ 1., 10., 10., 10.])</td></tr><tr><td>shape: </td><td>(4,)</td></tr><tr><td>docstring: </td><td>length of each stress period</td></tr><tr><td>docstring source: </td><td>src/Timing/tdis.f90\n",
-       "                                 line 38</td></tr></tbody></table>"
+       "<h3>Variable PERLEN</h3><table><tbody><tr><td>value: </td><td>array([ 1., 10., 10., 10.])</td></tr><tr><td>shape: </td><td>(4,)</td></tr></tbody></table>"
       ],
       "text/plain": [
        "Variable PERLEN \n",
        "value: array([ 1., 10., 10., 10.])\n",
-       "shape: (4,)\n",
-       "docstring: length of each stress period\n",
-       "docstring source: src/Timing/tdis.f90 line 38"
+       "shape: (4,)"
       ]
      },
      "execution_count": 16,
@@ -692,11 +683,11 @@
       "text/plain": [
        "{'SLN_1/NCOL': array([100], dtype=int32),\n",
        " 'HEADCONWELL/CSUB/ISCLOC': array([0], dtype=int32),\n",
-       " 'SLN_1/IMSLINEAR/ID': array([0, 0, 0, ..., 0, 0, 0], shape=(100,), dtype=int32),\n",
+       " 'SLN_1/IMSLINEAR/ID': array([0, 0, 0, ..., 0, 0, 0], dtype=int32),\n",
        " 'HEADCONWELL/NPF/IK33': array([1], dtype=int32),\n",
        " 'HEADCONWELL/NPF/IDEWATCV': array([0], dtype=int32),\n",
        " 'HEADCONWELL/CSUB/INAMEDBOUND': array([0], dtype=int32),\n",
-       " '__INPUT__/HEADCONWELL/STO/ICONVERT': array([1, 1, 1, ..., 1, 1, 1], shape=(100,), dtype=int32),\n",
+       " '__INPUT__/HEADCONWELL/STO/ICONVERT': array([1, 1, 1, ..., 1, 1, 1], dtype=int32),\n",
        " 'HEADCONWELL/INHFB': array([0], dtype=int32),\n",
        " 'TDIS/PERTIMSAV': array([0.]),\n",
        " 'HEADCONWELL/MYWELL/NCOLBND': array([0], dtype=int32),\n",
@@ -705,7 +696,7 @@
        " 'SLN_1/IMSLINEAR/WLU': array([0.]),\n",
        " 'HEADCONWELL/IC/LASTONPER': array([0], dtype=int32),\n",
        " 'HEADCONWELL/MVR/IBUDCSV': array([0], dtype=int32),\n",
-       " 'SLN_1/IMSLINEAR/IW': array([0, 0, 0, ..., 0, 0, 0], shape=(100,), dtype=int32),\n",
+       " 'SLN_1/IMSLINEAR/IW': array([0, 0, 0, ..., 0, 0, 0], dtype=int32),\n",
        " 'SLN_1/IMSLINEAR/ARO': array([0.]),\n",
        " 'TDIS/TOPERTIM': array([0.]),\n",
        " 'HEADCONWELL/VSC/IOUT': array([1012], dtype=int32),\n",
@@ -883,7 +874,6 @@
        " 'package_names',\n",
        " 'package_types',\n",
        " 'packages',\n",
-       " 'pkg_types',\n",
        " 'shape',\n",
        " 'size',\n",
        " 'solution_id',\n",
@@ -991,12 +981,12 @@
        "    <tr>\n",
        "      <th>hfb</th>\n",
        "      <td>HFB Package: HFB</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>csub</th>\n",
        "      <td>CSUB Package: CSUB</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mywell</th>\n",
@@ -1006,7 +996,7 @@
        "    <tr>\n",
        "      <th>mvr</th>\n",
        "      <td>MVR Package: MVR</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ic</th>\n",
@@ -1016,7 +1006,7 @@
        "    <tr>\n",
        "      <th>vsc</th>\n",
        "      <td>VSC Package: VSC</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>chd_0</th>\n",
@@ -1026,12 +1016,12 @@
        "    <tr>\n",
        "      <th>buy</th>\n",
        "      <td>BUY Package: BUY</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>gnc</th>\n",
        "      <td>GNC Package: GNC</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>sto</th>\n",
@@ -1057,15 +1047,15 @@
        "                description  is_mutable\n",
        "name                                   \n",
        "dis        DIS Package: DIS       False\n",
-       "hfb        HFB Package: HFB       False\n",
-       "csub     CSUB Package: CSUB       False\n",
+       "hfb        HFB Package: HFB        True\n",
+       "csub     CSUB Package: CSUB        True\n",
        "mywell  WEL Package: MYWELL        True\n",
-       "mvr        MVR Package: MVR       False\n",
+       "mvr        MVR Package: MVR        True\n",
        "ic           IC Package: IC       False\n",
-       "vsc        VSC Package: VSC       False\n",
+       "vsc        VSC Package: VSC        True\n",
        "chd_0    CHD Package: CHD_0        True\n",
-       "buy        BUY Package: BUY       False\n",
-       "gnc        GNC Package: GNC       False\n",
+       "buy        BUY Package: BUY        True\n",
+       "gnc        GNC Package: GNC        True\n",
        "sto        STO Package: STO       False\n",
        "npf        NPF Package: NPF       False\n",
        "\n",
@@ -1121,7 +1111,7 @@
      "evalue": "No values yet.\nBoundary condition MYWELL does not have any values for current stress periods.\nAdvance to a stress period with values and call this function again.",
      "output_type": "error",
      "traceback": [
-      "\u001b[31mValueError\u001b[39m\u001b[31m:\u001b[39m No values yet.\nBoundary condition MYWELL does not have any values for current stress periods.\nAdvance to a stress period with values and call this function again.\n"
+      "\u001b[0;31mValueError\u001b[0m\u001b[0;31m:\u001b[0m No values yet.\nBoundary condition MYWELL does not have any values for current stress periods.\nAdvance to a stress period with values and call this function again.\n"
      ]
     }
    ],
@@ -1220,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "6891da55-7dea-46f2-89bc-de5a360df2a1",
    "metadata": {
     "editable": true,
@@ -1233,10 +1223,10 @@
     {
      "data": {
       "text/plain": [
-       "<States.timestep_start: 3>"
+       "<States.stress_period_start: 1>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "fb7a50d6-b661-49e2-a698-8a00e9f7e78e",
    "metadata": {
     "editable": true,
@@ -1280,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "0cf984de-0f14-48e4-aa93-9311942c35f2",
    "metadata": {
     "editable": true,
@@ -1330,7 +1320,7 @@
        "0  (0, 4, 4) -0.05"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "55e5c293-2cf7-4a43-bf43-7765947304ce",
    "metadata": {},
    "outputs": [],
@@ -1369,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "a794f331-9eb5-44e3-9779-f116230bcea0",
    "metadata": {},
    "outputs": [
@@ -1413,7 +1403,7 @@
        "0  (0, 4, 4) -0.5"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "815c02e6-7445-442a-a8f6-f7892f4a24a0",
    "metadata": {},
    "outputs": [],
@@ -1454,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "9e0380f3-7267-4ad7-9443-c0a2c3952029",
    "metadata": {},
    "outputs": [
@@ -1498,7 +1488,7 @@
        "0  (0, 4, 4) -0.55"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1509,17 +1499,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "id": "2814a28c-b69b-4c9b-8109-a3494de3f373",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<States.timestep_start: 3>"
+       "<States.stress_period_start: 1>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "id": "ad53f942-e0f6-438f-89c3-645033f46fd5",
    "metadata": {},
    "outputs": [
@@ -1540,7 +1530,7 @@
        "['headconwell']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1551,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "id": "610e1699-3df2-4a28-a156-e59eab28043b",
    "metadata": {},
    "outputs": [
@@ -1561,7 +1551,7 @@
        "np.int32(2)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "id": "703ffaaa-d6e8-439c-aebc-8e9aaf7f954e",
    "metadata": {},
    "outputs": [
@@ -1582,7 +1572,7 @@
        "np.float64(11.083333333333334)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1593,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "id": "751bf33c-55bd-46a8-87a3-ec4071bc3505",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1609,7 @@
        "    gnc: <class 'modflowapi.extensions.pakbase.ApiGncPackage'>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1653,7 +1643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
