--- a/doc/Interactive.ipynb
+++ b/doc/Interactive.ipynb
@@ -150,10 +150,10 @@
     {
      "data": {
       "text/html": [
-       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.4.1.dev86+gdf41645b.d20250622</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.7.0.dev2</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is NOT available.</p>"
+       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.5.2.dev0+g330c5e2c.d20250626</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.7.0.dev2</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is NOT available.</p>"
       ],
       "text/plain": [
-       "<pymf6.mf6.MF6 at 0x1077d34d0>"
+       "<pymf6.mf6.MF6 at 0x104dc74d0>"
       ]
      },
      "execution_count": 6,
@@ -198,7 +198,7 @@
       "========================\n",
       "pymf6 configuration data\n",
       "========================\n",
-      "pymf6 version: 1.4.1.dev86+gdf41645b.d20250622\n",
+      "pymf6 version: 1.5.2.dev0+g330c5e2c.d20250626\n",
       "xmipy version: 1.3.1\n",
       "modflowapi version: 0.3.0.dev0\n",
       "ini file path: HOME/pymf6.ini\n",
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fde2326a-28ea-4269-ae9d-3b3ee2f7e93a",
+   "id": "d2ddf526-b9c9-4153-a31c-6dbe7ffdad0e",
    "metadata": {},
    "outputs": [],
    "source": []
