--- a/doc/Interactive.ipynb
+++ b/doc/Interactive.ipynb
@@ -150,10 +150,10 @@
     {
      "data": {
       "text/html": [
-       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.5.2.dev0+g330c5e2c.d20250626</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.7.0.dev2</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is NOT available.</p>"
+       "<h3>MF6</h3><h4>pymf6 configuration data</h4><table><tbody><tr><td>pymf6 version:</td><td>1.5.3.</td></tr><tr><td>xmipy version:</td><td>1.3.1</td></tr><tr><td>modflowapi version:</td><td>0.3.0.dev0</td></tr><tr><td>ini file path:</td><td>HOME/pymf6.ini</td></tr><tr><td>dll file path:</td><td>path/to/dll/libmf6.dll</td></tr><tr><td>MODFLOW version:</td><td>6.7.0.dev2</td></tr></tbody></table><p>MODFLOW Fortan variable documentation is NOT available.</p>"
       ],
       "text/plain": [
-       "<pymf6.mf6.MF6 at 0x104dc74d0>"
+       "<pymf6.mf6.MF6 at 0x10794f380>"
       ]
      },
      "execution_count": 6,
@@ -198,7 +198,7 @@
       "========================\n",
       "pymf6 configuration data\n",
       "========================\n",
-      "pymf6 version: 1.5.2.dev0+g330c5e2c.d20250626\n",
+      "pymf6 version: 1.5.3.\n",
       "xmipy version: 1.3.1\n",
       "modflowapi version: 0.3.0.dev0\n",
       "ini file path: HOME/pymf6.ini\n",
@@ -1245,6 +1245,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "id": "9f9f40fe-b2a4-4ff1-a654-4876ef81abee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nodelist</th>\n",
+       "      <th>head</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(0, 0, 0)</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(0, 9, 9)</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    nodelist  head\n",
+       "0  (0, 0, 0)   1.0\n",
+       "1  (0, 9, 9)   1.0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gwf.packages.chd_0.as_mutable_bc()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "id": "fb7a50d6-b661-49e2-a698-8a00e9f7e78e",
    "metadata": {
@@ -1270,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "0cf984de-0f14-48e4-aa93-9311942c35f2",
    "metadata": {
     "editable": true,
@@ -1282,51 +1343,34 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nodelist</th>\n",
-       "      <th>q</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(0, 4, 4)</td>\n",
-       "      <td>-0.05</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    nodelist     q\n",
-       "0  (0, 4, 4) -0.05"
+       "\u001b[0;31mInit signature:\u001b[0m\n",
+       "\u001b[0mMF6\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0msim_path\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mdll_path\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0muse_modflow_api\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0madvance_first_step\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mnew_step_only\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0mdo_solution_loop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m    \u001b[0m_develop\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "Wrapper around XmiWrapper and modflowapi.\n",
+       "\n",
+       "`advance_first_step = True` progresses to the first model step with\n",
+       "model time > 0. This is needed to access any internal values of BCs.\n",
+       "\u001b[0;31mFile:\u001b[0m           ~/Dev/pymf6/src/pymf6/mf6.py\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     "
       ]
      },
-     "execution_count": 32,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "mywell"
+    "MF6?"
    ]
   },
   {
@@ -1643,7 +1687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
